<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MajorsActivity">

    <FrameLayout
        android:id="@+id/nav_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/language_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/language_switch"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/majors_page_title"
            android:textAlignment="center"
            android:textSize="22dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/majors_body"
                android:textSize="16dp" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="0.125"
            android:background="#000000"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/ritaj_majorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/button_background"
            android:text="@string/ritaj_button"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_usButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aldrich"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_background"
            android:text="@string/contact_us_button"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>